diesel_derives/src/tests/snapshots/diesel_derives__tests__as_changeset_embed_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(AsChangeset)]\nstruct User {\n    id: i32,\n    name: String,\n    #[diesel(embed)]\n    post: Post,\n}\n"
---
const _: () = {
    use ::diesel;
    fn _check_owned()
    where
        String: diesel::expression::AsExpression<
            <users::r#name as diesel::Expression>::SqlType,
        >,
    {}
    impl diesel::query_builder::AsChangeset for User {
        type Target = users::table;
        type Changeset = <(
            diesel::dsl::Eq<users::r#name, String>,
            Post,
        ) as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset((
                diesel::ExpressionMethods::eq(users::r#name, self.name),
                self.post,
            ))
        }
    }
    #[allow(clippy::multiple_bound_locations)]
    fn _check_borrowed<'update>()
    where
        &'update String: diesel::expression::AsExpression<
            <users::r#name as diesel::Expression>::SqlType,
        >,
    {}
    impl<'update> diesel::query_builder::AsChangeset for &'update User
    where
        (
            diesel::dsl::Eq<users::r#name, &'update String>,
            &'update Post,
        ): diesel::query_builder::AsChangeset,
    {
        type Target = users::table;
        type Changeset = <(
            diesel::dsl::Eq<users::r#name, &'update String>,
            &'update Post,
        ) as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset((
                diesel::ExpressionMethods::eq(users::r#name, &self.name),
                &self.post,
            ))
        }
    }
};
