diesel_derives/src/tests/snapshots/diesel_derives__tests__as_changeset_embed_with_where_clause_1.snap
---
source: diesel_derives/src/tests/mod.rs
assertion_line: 108
expression: out
info:
  input: "#[derive(AsChangeset)]\nstruct User {\n    id: i32,\n    bar: String,\n    #[diesel(embed)]\n    embed: Embed,\n}\n"
---
const _: () = {
    use diesel;
    impl diesel::query_builder::AsChangeset for User {
        type Target = users::table;
        type Changeset = <(
            diesel::dsl::Eq<users::r#bar, String>,
            Embed,
        ) as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset((
                diesel::ExpressionMethods::eq(users::r#bar, self.bar),
                self.embed,
            ))
        }
    }
    impl<'update> diesel::query_builder::AsChangeset for &'update User
    where
        &'update Embed: diesel::query_builder::AsChangeset,
    {
        type Target = users::table;
        type Changeset = <(
            diesel::dsl::Eq<users::r#bar, &'update String>,
            &'update Embed,
        ) as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset((
                diesel::ExpressionMethods::eq(users::r#bar, &self.bar),
                &self.embed,
            ))
        }
    }
};
