diesel_derives/src/tests/snapshots/diesel_derives__tests__as_changeset_primary_key_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(AsChangeset)]\n#[diesel(primary_key(id, short_code))]\nstruct User {\n    id: i32,\n    short_code: String,\n    name: String,\n}\n"
---
const _: () = {
    use ::diesel;
    fn _check_owned()
    where
        String: diesel::expression::AsExpression<
            <users::r#name as diesel::Expression>::SqlType,
        >,
    {}
    impl diesel::query_builder::AsChangeset for User {
        type Target = users::table;
        type Changeset = <(
            diesel::dsl::Eq<users::r#name, String>,
        ) as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset((
                diesel::ExpressionMethods::eq(users::r#name, self.name),
            ))
        }
    }
    #[allow(clippy::multiple_bound_locations)]
    fn _check_borrowed<'update>()
    where
        &'update String: diesel::expression::AsExpression<
            <users::r#name as diesel::Expression>::SqlType,
        >,
    {}
    impl<'update> diesel::query_builder::AsChangeset for &'update User
    where
        (
            diesel::dsl::Eq<users::r#name, &'update String>,
        ): diesel::query_builder::AsChangeset,
    {
        type Target = users::table;
        type Changeset = <(
            diesel::dsl::Eq<users::r#name, &'update String>,
        ) as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset((
                diesel::ExpressionMethods::eq(users::r#name, &self.name),
            ))
        }
    }
};
