diesel_derives/src/tests/snapshots/diesel_derives__tests__as_changeset_treat_skip_update_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(AsChangeset)]\nstruct User {\n    id: i32,\n    #[diesel(skip_update)]\n    name: String,\n}\n"
---
const _: () = {
    use ::diesel;
    fn _check_owned() {}
    impl diesel::query_builder::AsChangeset for User {
        type Target = users::table;
        type Changeset = <() as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset(())
        }
    }
    #[allow(clippy::multiple_bound_locations)]
    fn _check_borrowed<'update>() {}
    impl<'update> diesel::query_builder::AsChangeset for &'update User
    where
        (): diesel::query_builder::AsChangeset,
    {
        type Target = users::table;
        type Changeset = <() as diesel::query_builder::AsChangeset>::Changeset;
        fn as_changeset(
            self,
        ) -> <Self as diesel::query_builder::AsChangeset>::Changeset {
            diesel::query_builder::AsChangeset::as_changeset(())
        }
    }
};
